--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,9 @@
   box-sizing: border-box;
 }
 
-a { text-decoration: none; }
+a { text-decoration: none;
+  color: white;
+ }
 
 li { list-style: none; }
 
