fix to icon colors in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,10 @@ article {
 
 article { display: none; }
 
+ion-icon {
+  color:var(--orange-yellow-crayola);
+}
+
 article.active {
   display: block;
   animation: fade 0.5s ease backwards;
