--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ main {
 
 .navbar {
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   background: hsla(240, 1%, 17%, 1);
