change navbar rounded corners to bottom and added margin-top padding for navbar to not obscure content in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,7 @@ a:visited {
 
 main {
   margin: 15px 12px;
+  margin-top: 60px;
   margin-bottom: 75px;
   min-width: 259px;
 }
@@ -474,7 +475,7 @@ main {
   background: hsla(240, 1%, 17%, 1);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
+  border-radius: 0px 0px 12px 12px;
   box-shadow: var(--shadow-2);
   z-index: 5;
 }
