--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1333,7 +1333,8 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   main {
-    margin-top: 100px;
+    margin-top: 60px;
+    padding-top: 20px;
     margin-bottom: 100px;
   }
 
