--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ html { font-family: var(--ff-poppins); }
 
 body { 
   background: var(--smoky-black);
-  margin-top: 40px
+  padding-top: 20px
 }
 
 
